# SENA-gf

./: CONTRIBUTING.md  Makefile  README.md  cu_gf_deep.F90  cu_gf_driver_post.F90  cu_gf_sh.F90  gf_test.F90  mt19937.F90
.github/workflows/: gpu_nvhpc.yml  linux_gnu.yml  linux_intel.yml  linux_nvhpc.yml  macos_gnu.yml  macos_intel.yml
ref/: CMakeLists.txt  README.md
ref/cmake/: compiler_flags_GNU_Fortran.cmake  compiler_flags_PGI_Fortran.cmake  gf_compiler_flags.cmake
ref/src/: CMakeLists.txt  cu_gf_deep.F90  cu_gf_driver.F90  cu_gf_driver_post.F90  cu_gf_driver_pre.F90  gf_test.F90  gf_utils.F90  mt19937.F90
ref/test/: CMakeLists.txt
ref/test/tools/: CMakeLists.txt
test/test_output/: output.test
